--- a/source/_includes/footer.html
+++ b/source/_includes/footer.html
@@ -1,1 +1,17 @@
-{% include custom/footer.html %}
+<div class="container clearfix">
+
+</div> <!-- end #footerWidgets -->
+<!-- begin #copyright -->
+<div id="copyrights">
+  <div class="container clearfix">
+
+    <span class="right">
+      <a class="backtotop" href="#">↑</a>
+    </span>
+
+  Copyright &copy; {{ site.time | date: "%Y" }} - {{ site.author }} -
+  <span class="credit">Powered by <a href="http://octopress.org">Octopress</a></span>
+
+  </div>
+</div>
+<!-- end #copyright -->
