--- a/source/_includes/header.html
+++ b/source/_includes/header.html
@@ -3,15 +3,13 @@
   <!-- begin #socialIcons -->
   <div id="social-icons">
     <ul id="social-links">
-      <li class="facebook-link"><a href="<?php echo of_get_option('sc_facebook') ?>" class="facebook" id="social-01" title="<?php _e( 'Join Us on Facebook!', 'site5framework' ); ?>">Facebook</a></li>
-      <li class="twitter-link"><a href="<?php echo of_get_option('sc_twitter') ?>" class="twitter" id="social-02" title="<?php _e( 'Follow Us on Twitter', 'site5framework' ); ?>">Twitter</a></li>
-      <li class="google-link"><a href="<?php echo of_get_option('sc_googleplus') ?>" id="social-03" title="<?php _e( 'Google+', 'site5framework' ); ?>" class="google">Google</a></li>
-      <li class="dribbble-link"><a href="<?php echo of_get_option('sc_dribble') ?>" id="social-04" title="<?php _e( 'Dribble', 'site5framework' ); ?>" class="dribbble">Dribble</a></li>
-      <li class="vimeo-link"><a href="<?php echo of_get_option('sc_vimeo') ?>" id="social-05" title="<?php _e( 'Vimeo', 'site5framework' ); ?>" class="vimeo">Vimeo</a></li>
-      <li class="skype-link"><a href="<?php echo of_get_option('sc_skype') ?>" id="social-06" title="<?php _e( 'Skype', 'site5framework' ); ?>" class="skype">Skype</a></li>
-      <li class="linkedin-link"><a href="<?php echo of_get_option('sc_linkedin') ?>" id="social-07" title="<?php _e( ' LinkedIn', 'site5framework' ); ?>" class="linkedin">Linkedin</a></li>
-      <li class="pinterest-link"><a href="<?php echo of_get_option('sc_pinterest') ?>" id="social-09" title="<?php _e( 'Pinterest', 'site5framework' ); ?>" class="pinterest">Pinterest</a></li>
-      <li class="rss-link"><a href="<?php echo of_get_option('sc_extrss') ?  of_get_option('sc_extrss') : bloginfo('rss_url'); ?>" id="social-08" title="<?php _e( 'RSS', 'site5framework' ); ?>" class="rss">RSS Feeds</a></li>
+      {% if site.github_user %}<li class="github-link"><a href="https://github.com/{{ site.github_user }}" id="social-01" title="GitHub" class="github">Github</a></li>{% endif %}
+      <li class="weibo-link"><a href="http://weibo.com/jiangbian66" id="social-07" title="Weibo" class="weibo">Weibo</a></li>
+      {% if site.twitter_user %}<li class="twitter-link"><a href="https://twitter.com/{{ site.twitter_user }}" class="twitter" id="social-02" title="Follow me on Twitter">Twitter</a></li>{% endif %}
+      {% if site.googleplus_user %}<li class="google-link"><a href="https://plus.google.com/{{ site.googleplus_user }}" id="social-03" title="Google+" class="google">Google</a></li>{% endif %}
+      <li class="dribbble-link"><a href="http://dribbble.com/glowin" id="social-04" title="Dribble" class="dribbble">Dribble</a></li>
+      <li class="douban-link"><a href="http://www.douban.com/people/glowin" id="social-05" title="douban" class="douban">douban</a></li>
+      <li class="rss-link"><a href="{{ root_url }}{{ site.subscribe_rss }}" id="social-06" title="RSS" class="rss">RSS Feeds</a></li>
     </ul>
   </div>
   <!-- end #socialIcons -->
