--- a/source/_includes/footer.html
+++ b/source/_includes/footer.html
@@ -1,5 +1,21 @@
 <div class="container clearfix">
-
+  <div class="widget-1 first one-fourth widget-container widget_text" id="text-3">
+    <h4>我的豆瓣秀</h4>      
+    <div class="textwidget">
+      <script type="text/javascript" src="http://www.douban.com/service/badge/30518086/?show=collection&amp;n=6&amp;columns=3&amp;hidelogo=yes&amp;cat=book" > 
+      </script>
+    </div>
+  </div>
+  <div class="widget-2 last one-fourth widget-container widget_links" id="linkcat-2"><h4>链接表</h4>
+    <ul class='xoxo blogroll'>
+      <li><a href="http://ichon.me/" title="Chon的博客，来自北京邮电大学">Chon&#039;s Blog</a></li>
+      <li><a href="http://linfcstmr.net/blog" rel="acquaintance met" title="技术宅改变世界！" target="_blank">linfcstmr(技术宅)</a></li>
+      <li><a href="http://www.cnblogs.com/chooseme/" rel="acquaintance met colleague" title="三千界" target="_blank">丹姐的碎碎念</a></li>
+      <li><a href="http://www.aegeanstudio.tk/" title="心海工作室" target="_blank">娇姐其实不是姐</a></li>
+      <li><a href="http://kangqiao.info" rel="contact" title="康桥" target="_blank">巴赫门徒</a></li>
+      <li><a href="http://www.usth.edu.cn/" title="黑龙江科技学院">黑龙江科技学院</a></li>
+    </ul>
+  </div>
 </div> <!-- end #footerWidgets -->
 <!-- begin #copyright -->
 <div id="copyrights">
