--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -41,6 +41,7 @@
     <link rel='stylesheet' id='site5_buttons-css'  href='{{ root_url }}/li/shortcodes/css/buttons.css?ver=3.5.1' type='text/css' media='all' />
     <link rel='stylesheet' id='columns-css'  href='{{ root_url }}/li/shortcodes/css/columns.css?ver=3.5.1' type='text/css' media='all' />
     <link rel='stylesheet' id='flexslider-css'  href='{{ root_url }}/library/css/flexslider.css?ver=3.5.1' type='text/css' media='all' />
+
     <script type='text/javascript' src='http://127.0.0.1/glow/wp-includes/js/jquery/jquery.js?ver=1.8.3'></script>
     <script type='text/javascript' src='{{ root_url }}/library/js/modernizr-2.6.1.min.js?ver=3.5.1'></script>
     <script type='text/javascript' src='{{ root_url }}/library/js/libs/selectivizr-min.js?ver=3.5.1'></script>
@@ -56,8 +57,6 @@
     <script type='text/javascript' src='{{ root_url }}/library/js/carousel/jquery.jcarousel.min.js?ver=3.5.1'></script>
     <script type='text/javascript' src='{{ root_url }}/library/js/jquery.easing-1.3.min.js?ver=3.5.1'></script>
     <link rel="shortcut icon" href="{{ root_url }}/images/ico/favicon.ico" type="image/ico" />
-
-  
     <!-- custom typography-->
     <link href='http://fonts.googleapis.com/css?family=Dosis' rel='stylesheet' type='text/css'>
     <!-- custom typography -->
@@ -70,6 +69,7 @@
 
     <!-- custom color scheme css -->  
     <link rel="stylesheet" href="{{ root_url }}/library/css/color-schemes/light-blue/styles.css">
+    <link rel='stylesheet'  href='{{ root_url }}/library/css/syntax.css' type='text/css' media='all' />
 {% include custom/head.html %}
 {% include google_analytics.html %}
   </head>
