--- a/.themes/ashin/source/_layouts/page.html
+++ b/.themes/ashin/source/_layouts/page.html
@@ -1,38 +1,37 @@
 ---
 layout: default
 ---
-
-<div>
-<article role="article">
-  {% if page.title %}
-  <header>
-    <h1 class="entry-title">{% if site.titlecase %}{{ page.title | titlecase }}{% else %}{{ page.title }}{% endif %}</h1>
-    {% if page.date %}<p class="meta">{% include post/date.html %}{{ time }}</p>{% endif %}
-  </header>
-  {% endif %}
-  {{ content }}
-  {% unless page.footer == false %}
-    <footer>
-      {% if page.date or page.author %}<p class="meta">
-        {% if page.author %}{% include post/author.html %}{% endif %}
-        {% include post/date.html %}{% if updated %}{{ updated }}{% else %}{{ time }}{% endif %}
-        {% if page.categories %}{% include post/categories.html %}{% endif %}
-      </p>{% endif %}
-      {% unless page.sharing == false %}
-        {% include post/sharing.html %}
-      {% endunless %}
-    </footer>
-  {% endunless %}
-</article>
-{% if site.disqus_short_name and page.comments == true %}
-  <section>
-    <h1>Comments</h1>
-    <div id="disqus_thread" aria-live="polite">{% include post/disqus_thread.html %}</div>
-  </section>
-{% endif %}
+<!-- page header -->
+<div class="container clearfix">
+  <img class="intro-img" src="{{ root_url }}/library/images/inner-page-bg.jpg" />
 </div>
+
+<div class="three-fourth">
+  <div id="main" role="main">
+    <article role="article" class="post type-post status-publish format-standard hentry clearfix">
+      {% if page.title %}
+      <header>
+        <h1>Posts Categorized / <span>{{ page.title | replace:'Category:','' | replace:'front-end', 'WEB前端' | replace:'sparks','创意火花' | replace:'tech','奇淫技巧' | replace:'mylife','生活感言' | replace:'others','其他' }}</span></h1>
+        {% if page.date %}<p class="meta">{% include post/date.html %}{{ time }}</p>{% endif %}
+      </header>
+      {% endif %}
+      {{ content }}
+      {% unless page.footer == false %}
+        <footer>
+        <!-- begin #pagination -->
+        <div id="pagination">
+          {% if paginator.previous_page %}<a href="{{ paginator.previous_page }}">Previous Page</a>{% endif %}
+          {% if paginator.next_page %}<a href="{{ paginator.next_page }}">Next Page</a>{% endif %}
+        </div>
+        <!-- end #pagination -->
+        </footer>
+      {% endunless %}
+    </article>
+
+  </div> <!-- end #main -->
+</div><!-- three-fourth -->
 {% unless page.sidebar == false %}
-<aside class="sidebar">
+<aside class="one-fourth last">
   {% if site.page_asides.size %}
     {% include_array page_asides %}
   {% else %}
