--- a/source/_includes/header.html
+++ b/source/_includes/header.html
@@ -29,7 +29,7 @@
     <div id="navigation-wrapper" class="clearfix">
       <nav id="main-navigation" class="main-menu">
         <ul class="sf-menu">
-            <li>{% include post/categories.html %}<a href="{{ root_url }}/{{ site.category_dir }}/front-end">WEB前端</a></li>
+            <li><a href="{{ root_url }}/{{ site.category_dir }}/front-end">WEB前端</a></li>
             <li><a href="{{ root_url }}/{{ site.category_dir }}/sparks">创意火花</a></li>
             <li><a href="{{ root_url }}/{{ site.category_dir }}/tech">奇淫技巧</a></li>
             <li><a href="{{ root_url }}/{{ site.category_dir }}/mylife">生活感言</a></li>
