--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -8,7 +8,6 @@ single: true
   {% include article.html %}
   <footer>
     <p class="meta">
-      {% include post/author.html %}
       {% include post/date.html %}{% if updated %}{{ updated }}{% else %}{{ time }}{% endif %}
       {% include post/categories.html %}
     </p>
@@ -25,9 +24,10 @@ single: true
     </p>
   </footer>
 </article>
+{% include post/author.html %}
 {% if site.disqus_short_name and page.comments == true %}
   <section>
-    <h1>Comments</h1>
+    <h1>留言区</h1>
     <div id="disqus_thread" aria-live="polite">{% include post/disqus_thread.html %}</div>
   </section>
 {% endif %}
