--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -2,28 +2,22 @@
 layout: default
 single: true
 ---
-
-<div>
-<article class="hentry" role="article">
+<div class="container clearfix ">
+</div>
+<div class="three-fourth">
+<article class="post type-post status-publish format-standard hentry clearfix" role="article">
   {% include article.html %}
-  <footer>
-    <p class="meta">
-      {% include post/date.html %}{% if updated %}{{ updated }}{% else %}{{ time }}{% endif %}
-      {% include post/categories.html %}
-    </p>
-    {% unless page.sharing == false %}
-      {% include post/sharing.html %}
-    {% endunless %}
-    <p class="meta">
-      {% if page.previous.url %}
-        <a class="basic-alignment left" href="{{page.previous.url}}" title="Previous Post: {{page.previous.title}}">&laquo; {{page.previous.title}}</a>
-      {% endif %}
-      {% if page.next.url %}
-        <a class="basic-alignment right" href="{{page.next.url}}" title="Next Post: {{page.next.title}}">{{page.next.title}} &raquo;</a>
-      {% endif %}
-    </p>
-  </footer>
 </article>
+<footer>
+  <p class="meta">
+    {% if page.previous.url %}
+      <a class="basic-alignment left" href="{{page.previous.url}}" title="Previous Post: {{page.previous.title}}">&laquo; {{page.previous.title}}</a>
+    {% endif %}
+    {% if page.next.url %}
+      <a class="basic-alignment right" href="{{page.next.url}}" title="Next Post: {{page.next.title}}">{{page.next.title}} &raquo;</a>
+    {% endif %}
+  </p>
+</footer>
 {% include post/author.html %}
 {% if site.disqus_short_name and page.comments == true %}
   <section>
@@ -33,11 +27,13 @@ single: true
 {% endif %}
 </div>
 {% unless page.sidebar == false %}
-<aside class="sidebar">
-  {% if site.post_asides.size %}
-    {% include_array post_asides %}
-  {% else %}
-    {% include_array default_asides %}
-  {% endif %}
-</aside>
+<div class="one-fourth last">
+  <aside class="sidebar">
+    {% if site.post_asides.size %}
+      {% include_array post_asides %}
+    {% else %}
+      {% include_array default_asides %}
+    {% endif %}
+  </aside>
+</div>
 {% endunless %}
